refactor: login 테스트 가능하도록 수정